Fixing full bleed image size on ipad pro.

--- a/clients/ios/static/storyDetailView.css
+++ b/clients/ios/static/storyDetailView.css
@@ -627,7 +627,7 @@ div + p {
 }
 
 .NB-ipad-pro-10-wide .NB-story .NB-large-image {
-    margin-left: -60px !important;
+    margin-left: -30px !important;
     width: calc(100% + 60px) !important;
 }
 
